--- a/polymer/package.json
+++ b/polymer/package.json
@@ -11,11 +11,14 @@
     "type": "git",
     "url": "https://github.com/ampproject/amp-by-example.git"
   },
+  "scripts": {
+    "build": "gulp"
+  },
   "dependencies": {
-    "@npm-polymer/polymer": "2.0.1",
     "@npm-polymer/app-layout": "2.0.0",
     "@npm-polymer/app-route": "2.0.0",
     "@npm-polymer/app-storage": "2.0.1",
+    "@npm-polymer/iron-ajax": "1.4.4",
     "@npm-polymer/iron-flex-layout": "1.3.7",
     "@npm-polymer/iron-form": "1.1.5",
     "@npm-polymer/iron-icon": "1.0.13",
@@ -26,8 +29,10 @@
     "@npm-polymer/iron-selector": "1.5.3",
     "@npm-polymer/paper-icon-button": "1.1.6",
     "@npm-polymer/paper-spinner": "2.0.0",
-    "@npm-polymer/iron-ajax": "1.4.4",
+    "@npm-polymer/polymer": "2.0.1",
     "@npm-polymer/shadycss": "1.0.1",
+    "@webcomponents/webcomponentsjs": "^1.0.10",
+    "merge-stream": "^1.0.1",
     "webcomponents.js": "^0.7.22"
   },
   "devDependencies": {
